Prod-EU/force-app/main/default/objects/SSIP_Rule__c/SSIP_Rule__c.object-meta.xml
<CustomObject>
    <description>Object stores all SSIP rule for the customers.</description>
    <label>SSIP Rule</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSIP Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>