Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Account_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_18_Digit_Id__c</fullName>
    <description>Records 18 digit Id. Mainly used for Duplicate Rule logic.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account 18 Digit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>