Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master detail relationship to the account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SSIP Rule</relationshipLabel>
    <relationshipName>SSIP_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>