Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Effective_Payor__c.field-meta.xml
<CustomField>
    <fullName>Effective_Payor__c</fullName>
    <description>If Rule is Funded then get the Payor tied to the account&apos;s Fund, else take the Payor tied to the rule.
Finally check if there is any First Order and if so refer the Payor to the First Order.</description>
    <formula>IF((ISPICKVAL(Is_Funded__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Fund__c))), Account__r.Fund__r.Payor__c,
IF((ISPICKVAL(Payor_Exist__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Payor__c))), Account__r.Payor__c,
IF(NOT(ISBLANK(First_Order__c)), First_Order__r.Payor__c, null
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Payor</label>
    <type>Text</type>
</CustomField>