Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Effective_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Effective_PO_Number__c</fullName>
    <description>If Rule is Funded then get the PO Number tied to the account&apos;s Fund, else take the PO Number tied to the rule.
Finally check if there is any First Order and if so refer the PO Number to the First Order.</description>
    <formula>IF((ISPICKVAL(Is_Funded__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Fund__c))), Account__r.Fund__r.PO_Reference_Number__c,
IF(NOT(ISBLANK(PO_Number__c)), PO_Number__c,
IF(NOT(ISBLANK(First_Order__c)), First_Order__r.PoNumber, null
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective PO Number</label>
    <type>Text</type>
</CustomField>