Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Effective_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Effective_Tax_Registration_Number__c</fullName>
    <description>If Rule has Fund associated then take tax reg no from Fund&apos;s Payor else
If Rule has Payor associated then take Payor&apos;s tax reg no else
If Rule has first order, which has Payor association then take Payor&apos;s tax reg no else
Take current account&apos;s tax reg no</description>
    <formula>IF((ISPICKVAL(Is_Funded__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Fund__c))), Account__r.Fund__r.Payor__r.Tax_Registration_Number__c,
IF((ISPICKVAL(Payor_Exist__c, &apos;True&apos;) &amp;&amp; NOT(ISBLANK(Account__r.Payor__c))), Account__r.Payor__r.Tax_Registration_Number__c,
IF(NOT(ISBLANK(First_Order__c)) &amp;&amp; NOT(ISBLANK(First_Order__r.Payor__c)), First_Order__r.Payor__r.Tax_Registration_Number__c, Account__r.Tax_Registration_Number__c
)))</formula>
    <label>Effective Tax Registration Number</label>
    <type>Text</type>
</CustomField>