Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/First_Repeat_Order_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>First_Repeat_Order_Lead_Days__c</fullName>
    <inlineHelpText>Lead days for the first shipment</inlineHelpText>
    <label>First Repeat Order Lead Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>