Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/First_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Shipment_Date__c</fullName>
    <description>Date when the first shipment needs to happen for this Schedule. It cam be immediate or in the future and should fall between the Rule Start and End date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date should be within the Rule Start Date and Rule End Date (if applicable). This date is set with the first order is shipped. Setting this date will create the Schedules.</inlineHelpText>
    <label>First Shipment Date</label>
    <type>Date</type>
</CustomField>