Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Frequency_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Frequency_In_Days__c</fullName>
    <description>Schedule interval between each shipments.</description>
    <label>Frequency (In Days)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>