Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Is_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To capture information if Signature should be taken while delivering a package.</description>
    <label>Is Signature Required?</label>
    <type>Checkbox</type>
</CustomField>