Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Last_Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Renewed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Renewed Date</label>
    <type>Date</type>
</CustomField>