Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName = &apos;CH_SSIP_Rule&apos;, &apos;net30&apos;, &apos;net30&apos;)</defaultValue>
    <description>Payment terms that will be used to track the payment. The default value will be based on the country&apos; preference</description>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Term</valueSetName>
    </valueSet>
</CustomField>