Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This value will be associated to the Order. If the Order is Funded, the PO Number associated to the Fund will be chose when Order is created.</inlineHelpText>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>