Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price book, which will filter out only SSIP Pricebooks</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>SSIP Rule</relationshipLabel>
    <relationshipName>SSIP_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>