Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PriceBookEntryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>