Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Date when the contract can be renewed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date should be greater than or equal to today&apos;s date.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>