Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Rule_Re_schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Rule_Re_schedule_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Re-schedule Date</label>
    <type>Date</type>
</CustomField>