Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Rule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rule_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when the rule will start. Defaulted to current date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Start Date</label>
    <type>Date</type>
</CustomField>