Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <description>Shipping method will be constrained by Country</description>
    <inlineHelpText>Chosen value will be defaulted to all the schedules associated to this Rule.</inlineHelpText>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Method</valueSetName>
    </valueSet>
</CustomField>