Prod-EU/force-app/main/default/objects/SSIP_Rule__c/fields/SSIP_Payor__c.field-meta.xml
<CustomField>
    <fullName>SSIP_Payor__c</fullName>
    <description>Payor associated to the Account to which the Order will be created.</description>
    <formula>If(ISPICKVAL(Is_Funded__c, &apos;True&apos;) || ISPICKVAL(Payor_Exist__c, &apos;True&apos;) || (NOT(ISBLANK( First_Order__c )) &amp;&amp; (NOT(ISBLANK( First_Order__r.Fund__c )) || NOT(ISBLANK( First_Order__r.Payor__c )))),
HYPERLINK(&quot;/&quot;+Account__r.Payor__c, Account__r.Payor__r.Name, &quot;_blank&quot;), &apos;&apos;)</formula>
    <inlineHelpText>Payor associated to the Account to which the Order will be created.</inlineHelpText>
    <label>Payor</label>
    <type>Text</type>
</CustomField>