Prod-EU/force-app/main/default/objects/SSIP_Rule__c/recordTypes/CH_SSIP_Rule.recordType-meta.xml
<RecordType>
    <fullName>CH_SSIP_Rule</fullName>
    <active>true</active>
    <description>SSIP Rule Recordtype for CH</description>
    <label>CH SSIP Rule</label>
</RecordType>