Prod-EU/force-app/main/default/objects/SSIP_Rule__c/recordTypes/GB_SSIP_Rule.recordType-meta.xml
<RecordType>
    <fullName>GB_SSIP_Rule</fullName>
    <active>true</active>
    <description>SSIP Rule for GB</description>
    <label>GB SSIP Rule</label>
</RecordType>