Prod-EU/force-app/main/default/objects/SSIP_Rule__c/recordTypes/SI_SSIP_Rule.recordType-meta.xml
<RecordType>
    <fullName>SI_SSIP_Rule</fullName>
    <active>true</active>
    <description>SI SSIP Rule for Slovenia</description>
    <label>SI SSIP Rule</label>
</RecordType>