Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/Check_Account_Fund_For_Funded_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Account_Fund_For_Funded_Rule</fullName>
    <active>true</active>
    <description>If Fund is selected for the Rule, check if the account has Fund associated.</description>
    <errorConditionFormula>AND(ISPICKVAL( Is_Funded__c, &apos;True&apos; ), ISBLANK( Account__r.Fund__c ))</errorConditionFormula>
    <errorMessage>Account does not have Fund association, please associate a Fund before enabling the Rule.</errorMessage>
</ValidationRule>