Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/Country_Priceboook_Should_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Priceboook_Should_Match</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(Country__c,&quot;United Kingdom&quot;),
NOT(BEGINS( Price_Book__r.Name , &quot;UK&quot;))),
AND(
ISPICKVAL(Country__c,&quot;Ireland&quot;),
NOT(BEGINS( Price_Book__r.Name , &quot;IE&quot;)))

)</errorConditionFormula>
    <errorDisplayField>Price_Book__c</errorDisplayField>
    <errorMessage>Please select the country related pricebook</errorMessage>
</ValidationRule>