Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/End_Date_Be_Greater_Than_The_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Be_Greater_Than_The_Start_Date</fullName>
    <active>true</active>
    <description>SSIP Rule End Date or Renewal date should be greater than the Rule Start Date</description>
    <errorConditionFormula>OR(Rule_End_Date__c &lt; Rule_Start_Date__c,
 Renewal_Date__c &lt; Rule_Start_Date__c)</errorConditionFormula>
    <errorMessage>&apos;Rule End Date&apos; or &apos;Renewal Date&apos; must be greater than the &apos;Rule Start Date&apos;</errorMessage>
</ValidationRule>