Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/End_Date_Can_Not_Be_Less_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Can_Not_Be_Less_Than_Today</fullName>
    <active>false</active>
    <description>If End Date or Renewal date changed then cannot select prior date than today</description>
    <errorConditionFormula>OR(Rule_End_Date__c &lt; TODAY(),
 Renewal_Date__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>&apos;Rule End Date&apos; or &apos;Renewal Date&apos; can&apos;t be less than Today&apos;s date.</errorMessage>
</ValidationRule>