Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/Fund_Selection_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Fund_Selection_Check</fullName>
    <active>true</active>
    <description>If the payment term is credit card or prepaid then the Fund is not applicable.</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
    ISCHANGED( Is_Funded__c ), 
    ISPICKVAL(Is_Funded__c, &apos;True&apos;), 
    OR(ISPICKVAL( Payment_Term__c, &apos;net0&apos;), ISPICKVAL( Payment_Term__c, &apos;net-1&apos;))
)</errorConditionFormula>
    <errorMessage>Rule cannot be funded if the payment term is either Prepaid or Credit Card.</errorMessage>
</ValidationRule>