Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/Payment_Term_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Term_Check</fullName>
    <active>true</active>
    <description>Payment Term Credit Card can be chosen if the customer is paying. Not applicable for Funded or Payors.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
NOT(ISBLANK(Effective_Payor__c)), ISPICKVAL( Payment_Term__c, &apos;net0&apos;))</errorConditionFormula>
    <errorMessage>Payment Term &apos;Credit Card&apos; cannot be chosen as there is a Payor association to the Rule.</errorMessage>
</ValidationRule>