Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/Payor_Selection_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payor_Selection_Check</fullName>
    <active>true</active>
    <description>If the payment term is credit card or prepaid then the Payor cannot be added.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
OR(ISCHANGED(Payor_Exist__c), ISCHANGED(Is_Funded__c)),
OR(ISPICKVAL(Payor_Exist__c, &apos;True&apos;), ISPICKVAL(Is_Funded__c, &apos;True&apos;)),
OR(ISPICKVAL( Payment_Term__c, &apos;net0&apos;), ISPICKVAL( Payment_Term__c, &apos;net-1&apos;))
)</errorConditionFormula>
    <errorMessage>Payor cannot be selected if the payment term either Prepaid or Credit Card.</errorMessage>
</ValidationRule>