Prod-EU/force-app/main/default/objects/SSIP_Rule__c/validationRules/Product_Change_Is_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Change_Is_Not_Allowed</fullName>
    <active>true</active>
    <description>Product is not changeable. You should cancel SSIP Rule and create new one for new Product.</description>
    <errorConditionFormula>ISCHANGED(Product__c)</errorConditionFormula>
    <errorMessage>Product is not changeable. You should cancel SSIP Rule and create new one for new Product.</errorMessage>
</ValidationRule>